// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppBarAction should automatically enable the inherit color state if the parent app bar enables the inheritColor prop 1`] = `
<div>
  <header
    class="rmd-app-bar rmd-app-bar--primary rmd-app-bar--normal"
  >
    <button
      class="rmd-button rmd-button--icon rmd-app-bar__action rmd-app-bar__action--inherit"
      type="button"
    >
      <span
        class="rmd-ripple-container"
      />
    </button>
  </header>
</div>
`;

exports[`AppBarAction should automatically enable the inherit color state if the parent app bar enables the inheritColor prop 2`] = `
<div>
  <header
    class="rmd-app-bar rmd-app-bar--primary rmd-app-bar--normal"
  >
    <button
      class="rmd-button rmd-button--icon rmd-app-bar__action"
      type="button"
    >
      <span
        class="rmd-ripple-container"
      />
    </button>
  </header>
</div>
`;

exports[`AppBarAction should automatically enable the inherit color state if the parent app bar enables the inheritColor prop 3`] = `
<div>
  <header
    class="rmd-app-bar rmd-app-bar--primary rmd-app-bar--normal"
  >
    <button
      class="rmd-button rmd-button--icon rmd-app-bar__action rmd-app-bar__action--inherit"
      type="button"
    >
      <span
        class="rmd-ripple-container"
      />
    </button>
  </header>
</div>
`;

exports[`AppBarAction should render correctly (with snapshots) 1`] = `
<div>
  <button
    class="rmd-button rmd-button--icon rmd-app-bar__action"
    type="button"
  >
    <span
      class="rmd-ripple-container"
    />
  </button>
</div>
`;

exports[`AppBarAction should render correctly (with snapshots) 2`] = `
<div>
  <button
    class="rmd-button rmd-button--icon rmd-app-bar__action"
    id="app-bar-action"
    type="button"
  >
    <i
      class="material-icons"
    >
      menu
    </i>
    <span
      class="rmd-ripple-container"
    />
  </button>
</div>
`;

exports[`AppBarAction should render correctly (with snapshots) 3`] = `
<div>
  <button
    class="rmd-button rmd-button--icon rmd-button--text-primary rmd-app-bar__action rmd-app-bar__action--first rmd-app-bar__action--last"
    id="app-bar-action"
    type="button"
  >
    <i
      class="material-icons"
    >
      menu
    </i>
    <span
      class="rmd-ripple-container"
    />
  </button>
</div>
`;
